deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service
spec:
  selector:
    app: warehouse-app #должно соответствовать лейблу пода
  ports:
    - protocol: TCP
      name: web
      port: 8088 #порт сервиса
      targetPort: 8080 #порт пода (порт, который открыт для контейнера)
  type: ClusterIP
